--- a/master.css
+++ b/master.css
@@ -41,7 +41,7 @@ body{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    border: 1px solid #ffffff;
+    border: 2px solid #ffffff;
     padding: 10px 10px 20px;
     border-radius: 30px;
 }
@@ -50,4 +50,55 @@ body{
     border: 2px solid #fff;
     font-size: 10px;
     border-radius: 30px;
+}
+
+.scroll-bar{
+    animation: mover 1s infinite alternate;
+}
+
+@keyframes mover{
+    0%{transform: translateY(0);}
+    100%{transform: translateY(10px);}
+}
+
+
+
+
+/*-------------About------------*/
+
+.about{
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.profile-img{
+    height: 400px; 
+}
+
+.nav-bar{
+    top: 0;
+    position: sticky;
+    z-index: 2;
+}
+
+.navbar{
+    background-color: black;
+}
+
+.nav-bar .fa-bars{
+    font-size: 35px;
+    color: #fff;
+}
+
+.navbar-toggler{
+    outline: none !important;
+}
+
+.navbar-nav{
+    float: right;
+    text-align: right;
+}
+
+.nav-link{
+    color: #fff !important ;
 }
