--- a/master.css
+++ b/master.css
@@ -69,6 +69,7 @@ body{
 .about{
     padding-top: 100px;
     padding-bottom: 50px;
+    padd
 }
 
 .profile-img{
@@ -101,4 +102,81 @@ body{
 
 .nav-link{
     color: #fff !important ;
+}
+
+.skills-bar p{
+    margin-bottom: 6px;
+    font-weight: 600;
+}
+
+.progress{
+    border-radius: 16px;
+    margin-bottom: 10px;
+}
+
+.progress-bar{
+    border-radius: 16px;
+    background: #000000 !important;
+}
+
+
+/*---------------Resume-------------------*/
+
+.resume{
+    padding-top: 70px;
+    padding-bottom: 30px;
+    background: #f9f9f9;
+}
+
+.resume h3{
+    margin-bottom: 50px;
+}
+
+
+.timeline{
+    list-style-type: none;
+    position: relative;
+}
+
+.timeline::before{
+    content: '';
+    background: #555;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 1;
+}
+
+.timeline li{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    background: #fff;
+}
+
+.timeline li h4{
+    background-color: #000;
+    padding: 5px 0 5px 20px;
+    color: #fff;
+    font-size: 15px ;
+}
+
+.timeline li h4{
+    font-weight: bold;
+    color: #ccc;
+}
+
+.timeline li:before{
+    content: '';
+    background: #fff;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #000;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 1;
 }
