--- a/master.css
+++ b/master.css
@@ -22,7 +22,7 @@ body{
 
 .user-box img{
     border-radius: 50%;
-    width: 250px;
+    width: 350px;
     border: 2px solid #6caed5;
 }
 
@@ -61,6 +61,36 @@ body{
     100%{transform: translateY(10px);}
 }
 
+.footer-social-icons {
+    display:block;
+    color: rgb(0, 0, 0);
+}
+.social-icon {
+    color: rgb(0, 0, 0);
+}
+
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+}
+.social-icons a {
+    color: rgb(104, 94, 94);
+    text-decoration: none;
+}
+.fa-facebook {
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+}
+.fa-instagram {
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+}
 
 
 
@@ -189,6 +219,7 @@ body{
 .blogs{
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-top: 150px;
 }
 
 .blogs h1{
@@ -218,5 +249,76 @@ body{
 .blogs-box p{
     font-size: 15;
     margin-top: 20px;
-    color: 7777;
+    color: #777;
+}
+
+.blogs-box:hover{
+    background: rgb(121, 116, 116);
+    color: #fff;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    transition: 1s;
+}
+
+.blogs-box:hover p{
+    color: #fff;
+}
+
+
+
+/*--------------------Contact--------------------*/
+ 
+
+.contact{
+    margin-top: 150px;
+    width: 100%;
+    padding-top: 50px;
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(images/background4.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
+}
+
+.contact .row{
+    padding: 30px 0;
+    font-size: 22px;
+}
+
+.contact .col-md-4 .fa{
+    padding: 10px;
+    font-size: 40px;
+}
+
+.contact .btn{
+    padding: 10px 25px 10px 25px;
+    margin: 5px;
+    border-radius: 30px;
+    border: 2px solid #fff;
+    background: transparent;
+
+} 
+
+.contact .btn:focus{
+    box-shadow: none !important;
+}
+
+.contact .btn:hover{
+    border: 2px solid #000 !important;
+    background: #000 !important;
+    transition: 0.6s;
+}
+
+.contact .btn .fa{
+    margin-right: 10px;
+}
+
+.footer{
+    background: #000;
+    height: 50px;
+    margin-top: 50px;
+    color: #fff;
+    padding-top: 10px;
 }
